--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -111,6 +111,7 @@ footer {
 .activity-card {
   color: #000;
   position: relative;
+  width: 100%;
   height: 350px;
   /* width: calc(25% - 20px); */
   /* padding: 6px; */
@@ -123,7 +124,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
+  /* align-items: center; */
 }
 .activity-card img {
   width: 100%;
